--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
     <title>The FLIꟼDOT Archive</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; color: #333; }
@@ -16,6 +17,13 @@
 </head>
 <body>
 
+<script>
+        if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+      .then(() => console.log("Service Worker Registered"));
+  }
+</script>
+    
     <h1>The FLIꟼDOT Archive</h1>
     <div class="container">
 
