--- a/The Sampled Thoughts LP/thesampledthoughtslp.html
+++ b/The Sampled Thoughts LP/thesampledthoughtslp.html
@@ -35,7 +35,7 @@
 		
 		<h4>This album is incomplete. More is coming soon...</h4>
 
-        <a href="..\index.html">← Back to Main Page</a>
+        <a href="..\">← Back to Main Page</a>
 
 	    <br>
     </div>
