--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="favicon-192x192.png" sizes="192x192" type="image/png">
     <link rel="manifest" href="manifest.json">
     <title>The FLIꟼDOT Archive</title>
     <style>
