--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </script>
     
     <h1>The FLIꟼDOT Archive</h1>
+    <img src="FLIPDOT.png">
     <div class="container">
 
         <!--Albums and Singles-->
