--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </script>
     
     <h1>The FLIꟼDOT Archive</h1>
-    <img src="FLIPDOT.png">
+    <img src="FLIPDOT.jpg" width="1500" height="500">
     <div class="container">
 
         <!--Albums and Singles-->
