--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       .then(() => console.log("Service Worker Registered"));
   }
 </script>
-    
+
+    <img src="FLIPDOT.png" width="1500" height="500">
     <h1>The FLIꟼDOT Archive</h1>
-    <img src="FLIPDOT.jpg" width="1500" height="500">
     <div class="container">
 
         <!--Albums and Singles-->
