--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   }
 </script>
 
-    <img src="FLIPDOT.png" width="1500" height="500">
+    <img src="flipdot.png" width="1500" height="500">
     <h1>The FLIꟼDOT Archive</h1>
     <div class="container">
 
