--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="manifest" href="manifest.json">
-    <title>The FLIꟼDOT Archive</title>
+    <title>The FLIPDOT Archive</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; color: #333; }
         h1 { color: inherit; }
