--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </script>
 
     <img src="flipdot.png">
-    <h1>The FLIꟼDOT Archive</h1>
+    <h1>The FLIPDOT Archive</h1>
     <div class="container">
 
         <!--Albums and Singles-->
