--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   }
 </script>
 
-    <img src="flipdot.png">
+    <img src="FLIPDOT LOGO 192.png">
     <h1>The FLIPDOT Archive</h1>
     <div class="container">
 
